# real_time_universal_children_chinese

./: .gitignore  CMakeLists.txt  README.md  makefile  makefile.linux  test.sh  url.txt
demo/: CMakeLists.txt  run_script.cc  vadec.cc  vadec_mt.cc  vadec_s.cc
include/: tlv_kaldi_dec_interface.h  tlv_kaldi_vadec_interface.h
lm_extend/: CMakeLists.txt  lm_extend.cc  lm_extend.h
res/GEN-Chn-0-STU/: cfg  phones.txt  ques_mark.txt  readme  words.txt
test/: test.c
test/tool/: CMakeLists.txt  excFea.cc  kld-decoder.cc  latgen-faster-mapped.cc  mem_leak_test.cc  multi-decoder.cc  nnet-forward.cc
third/ATLAS_headers/: readme
third/ATLAS_headers/code/ATLAS/X86_64/: Makefile  xarchinfo_linux  xarchinfo_x86  xconfig  xprobe_3dnow  xprobe_OS  xprobe_arch  xprobe_asm  xprobe_avx  xprobe_avxmac  xprobe_pmake  (+6 more)
third/boost/: CMakeLists.txt  boost.gyp
third/boost/asio/ssl/impl/: rfc2818_verification.ipp
third/boost/config/: user.hpp
third/boost/filesystem/: path.hpp
third/boost/network/protocol/http/client/: async_impl.hpp  pimpl.hpp
third/boost/network/protocol/http/client/connection/: sync_base.hpp  sync_normal.hpp
third/boost/network/protocol/http/impl/: response.ipp
third/boost/network/protocol/http/policies/: async_resolver.hpp
third/boost/network/protocol/http/traits/: resolver.hpp
third/boost/spirit/home/support/detail/endian/: endian.hpp
third/boost/src/filesystem/: operations.cpp  path.cpp
third/easylogging/: CMakeLists.txt  logging.cc  logging.h
third/json/: CMakeLists.txt  cJSON.h
third/nosqlite/: CMakeLists.txt  nosqlite.c  nosqlite.h
third/openfst/libs/: libfst.la  libfst.so.8
third/staticjson/: CMakeLists.txt
third/webrtc/: CMakeLists.txt  typedefs.h
third/webrtc/common_audio/signal_processing/: spl_inl.c
third/webrtc/common_audio/vad/: vad_core.c  vad_core.h  webrtc_vad.c
third/webrtc/common_audio/vad/include/: webrtc_vad.h
tlv/: CMakeLists.txt
tlv/kaldi/base/: .depend.mk  kaldi-error.cc  kaldi-error.h
tlv/kaldi/chain/: .depend.mk
tlv/kaldi/cudadecoder/: .depend.mk  cuda-decoder.h
tlv/kaldi/cudafeat/: .depend.mk  feature-mfcc-cuda.h  online-cuda-feature-pipeline.cc  online-ivector-feature-cuda.cc
tlv/kaldi/cudamatrix/: .depend.mk  cu-device.h
tlv/kaldi/decoder/: .depend.mk  grammar-fst.cc  grammar-fst.h  lattice-faster-decoder.cc  lattice-faster-decoder.h
tlv/kaldi/feat/: .depend.mk
tlv/kaldi/fstext/: .depend.mk
tlv/kaldi/gmm/: .depend.mk
tlv/kaldi/hmm/: .depend.mk
tlv/kaldi/ivector/: .depend.mk
tlv/kaldi/lat/: .depend.mk  .lattice-functions.cc.swp  .word-align-lattice.cc.swp
tlv/kaldi/matrix/: .depend.mk
tlv/kaldi/nnet/: .depend.mk
tlv/kaldi/nnet3/: .depend.mk
tlv/kaldi/online2/: .depend.mk  online-nnet3-decoding.cc  online-nnet3-decoding.h
tlv/kaldi/transform/: .depend.mk
tlv/kaldi/tree/: .depend.mk
tlv/kaldi/util/: .depend.mk  .kaldi-io.cc.swp
tlv/kaldiext/: tlv_kaldi_dec.cc  tlv_kaldi_dec.h  tlv_kaldi_dec_cfg.cc  tlv_kaldi_dec_cfg.h
tlv/kaldiext/feat/: tlv_kdext_feat.cc  tlv_kdext_feat.h  tlv_kdext_feat_cfg.cc  tlv_kdext_feat_cfg.h
tlv/kaldiext/forward/: tlv_kdext_forward.cc  tlv_kdext_forward.h  tlv_kdext_forward_cfg.cc  tlv_kdext_forward_cfg.h
tlv/kaldiext/rec/: tlv_kdext_rec.cc  tlv_kdext_rec.h  tlv_kdext_rec_cfg.cc  tlv_kdext_rec_cfg.h
tlv/kaldiext/struct/: tlv_kaldi_dec_extra_params.cc  tlv_kaldi_dec_extra_params.h
tlv/kaldiext/utils/: tlv_kaldi_dec_sub_func.cc  tlv_kaldi_dec_sub_func.h  tlv_noise_log.h  utility.cc  utility.h
tlv/kaldiext/utils/tokenizer/: tokenizer.cc  tokenizer.h
tlv/kaldiext/utils/writerwrapper/: writerwrapper.cc  writerwrapper.h
tlv/kaldiext/vadparam/: vadparamdefine.h  vadparamloader.cc  vadparamloader.h
tlv/sphlib/cfg/: tlv_arg.c  tlv_arg.h  tlv_cfg_file.c  tlv_cfg_file.h  tlv_cfg_queue.c  tlv_cfg_queue.h  tlv_part_cfg.c  tlv_part_cfg.h
tlv/sphlib/hdict/: tlv_dict.c  tlv_dict.h  tlv_nosqlite_dict.c  tlv_nosqlite_dict.h
tlv/sphlib/hmath/: tlv_audio_buffer.c  tlv_audio_buffer.h  tlv_guassrand.c  tlv_guassrand.h  tlv_mat.c  tlv_mat.h  tlv_math.c  tlv_math.h  tlv_matrix.c  tlv_matrix.h  tlv_vector.c  tlv_vector.h
tlv/sphlib/pack/: tlv_flist.c  tlv_flist.h  tlv_pack.c  tlv_pack.h  tlv_pack2.c  tlv_pack2.h
tlv/struct/: tlv_array.c  tlv_array.h  tlv_bit_heap.c  tlv_bit_heap.h  tlv_cellar.c  tlv_cellar.h  tlv_charbuf.c  tlv_charbuf.h  tlv_define.h  tlv_errinfo.c  tlv_errinfo.h  tlv_fix_array.c  tlv_fix_array.h  tlv_heap.c  tlv_heap.h  tlv_label.c  tlv_label.h  tlv_list.c  tlv_list.h  tlv_loop.c  tlv_loop.h  tlv_mem_heap.c  tlv_mem_heap.h  tlv_mpond.c  tlv_mpond.h  tlv_queue.c  tlv_queue.h  tlv_shash.c  tlv_shash.h  tlv_sort.c  tlv_sort.h  tlv_str_encode.c  tlv_str_encode.h  tlv_str_hash.c  tlv_str_hash.h  tlv_strfile.c  tlv_strfile.h  tlv_string.c  tlv_string.h  tlv_sys.c  (+1 more)
tlv/toollib/cfg/: tlv_main_cfg.c  tlv_main_cfg.h  tlv_mainbin_cfg.c  tlv_mainbin_cfg.h
tool/: delay_statics.py  kld-decoder  mem_leak_test  nnet-forward
vadec/: CMakeLists.txt
vadec/src/: tlv_kaldi_vadec.cc  tlv_kaldi_vadec.h  tlv_kaldi_vadec_define.h  tlv_kaldi_vadec_interface.cc  vadec_stream.cc  vadec_stream.h
(+1 files in other folders)
